# Omistral

./: Cargo.toml  README.md
backends/mistral_rs/: Cargo.toml
cli/: Cargo.toml  README.md
cli/src/: main.rs
common/: Cargo.toml
core/: Cargo.toml  README.md
omistral_core/: Cargo.toml
omistral_core/src/backend/: core.rs
omistral_core/src/backend/llama_cpp/: README.md
omistral_core/src/backend/vllm/: README.md
server/: Cargo.toml  README.md
