[workspace]
members = [
    "server",
    "cli",
    "common"
]
resolver = "2"

[workspace.dependencies]
# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
clap = { version = "4.5", features = ["derive"] }

[workspace.package]
version = "0.1.0"
authors = ["Akshat Sharma"]
description = "Omistral - Get up and running with large language models."
